[package]
name = "map_key_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
criterion = { version = "0.3.6", features = ["html_reports"] }

[[bench]]
name = "hash_with_allocations"
harness = false

[[bench]]
name = "hash_without_allocations"
harness = false

[[bench]]
name = "hash_with_smart_allocations"
harness = false

[[bench]]
name = "hash_with_original"
harness = false