[package]
edition = "2021"
name = "map_key_experiment"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = {version = "0.3.6", features = ["html_reports"]}
indexmap = "1.9.1"
rand = "0.8.5"

[[bench]]
harness = false
name = "hash_with_allocations"

[[bench]]
harness = false
name = "hash_without_allocations"

[[bench]]
harness = false
name = "hash_with_smart_allocations"

[[bench]]
harness = false
name = "hash_with_original"

[[bench]]
harness = false
name = "btree_with_allocations"

[[bench]]
harness = false
name = "btree_without_allocations"

[[bench]]
harness = false
name = "btree_with_smart_allocations"

[[bench]]
harness = false
name = "btree_with_original"

[[bench]]
harness = false
name = "index_with_allocations"

[[bench]]
harness = false
name = "index_without_allocations"

[[bench]]
harness = false
name = "index_with_smart_allocations"

[[bench]]
harness = false
name = "index_with_original"